src/test/deca/context/valid/class/class_method_overriden.deca
/// Description:
// 	  Test of syntax when overriding a method
//
// Resultats:
// 	  ok
// Historique:
// 	  cree le 17/01/2023
class A {
    boolean f(Object obj, int a) {}
}
class B extends A {
    protected int x;
    boolean f(Object param1, int param2) {
        this.x = 3;
    } // B has only 1 method f
}
{
    1;
}